--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -230,7 +230,7 @@ h1, h3{
 .container-post i{
 	font-size: 25px;
 }
-.container-post p{
+.container-post p, .container-post li{
 font-size: 23px;
 word-spacing: 2px;
 color:#445;
@@ -242,7 +242,7 @@ font-weight: 200;
 	.container-post{
 		text-align: left;
 	}
-		.container-post p{
+		.container-post p, .container-post li{
 			font-size: 20px;
 			word-spacing: 1px;
 		}
