--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
 
-  <nav class="navbar navbar-default {% if page.homepage %} navbar-fixed-top {% endif %}">
+  <nav class="navbar nav-down navbar-default navbar-fixed-top navbar-blog ">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -45,7 +45,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="text-center hidden-xs" {% if page.homepage %} style="padding-top:94px" {% endif %}><a class="logo" href="{{site.url}}"> <img src="{{ site.data.template.logo.img }}" alt="logo-les-petits-hugues"></a></div>
+<div class="text-center hidden-xs" style="padding-top:94px"><a class="logo" href="{{site.url}}"> <img src="{{ site.data.template.logo.img }}" alt="logo-les-petits-hugues"></a></div>
 <br>
 
 </header>
