--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,9 +11,7 @@
 </div>
 
 {% include footer.html %}
-
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="{{ "/js/bootstrap.js" | prepend: site.baseurl }}"></script>
+{% include js.html %}
 
   </body>
 </html>
