--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -284,3 +284,11 @@ font-weight: 200;
 	font-weight: 400;
 	text-align: center;
 }
+/* navbar hide on scroll down */
+.nav-up {
+    top: -75px;
+}
+nav {
+  top: 0;
+  transition: top 0.2s ease-in-out !important;
+}
