--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,9 +71,8 @@
 
 
 {% include footer.html %}
+{% include js.html %}
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="{{ "/js/bootstrap.js" | prepend: site.baseurl }}"></script>
 
   </body>
 </html>
