--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,7 +1,7 @@
 	<div class="row">
 
         <div class="contact-form">
-          <form name="sentMessage" id="contactForm" action="http://mailthis.to/lespetitshugues" method="post">
+          <form name="sentMessage" id="contactForm" action="http://mailthis.to/petitshugues1" method="post">
 
             <div class="text-center"><b>Contactez-moi</b></div>
             <br>
