--- a/_includes/css/well.css
+++ b/_includes/css/well.css
@@ -65,4 +65,5 @@ filter:progid:DXImageTransform.Microsoft.Shadow(color=#cfcfcf, Direction=134, St
 }
 .well-title{
 	margin-top:20px;
+	color: #1d1d1d;
 }
