--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 		<div class="col-md-4">
 			<div class="text-center">
 			<div class="footer-icons">
-		        <a href="{{ site.data.template.social.facebook }};" target="_bank"><i class="fa fa-facebook-square " aria-hidden="true"></i></a>
+		        <!--<a href="{{ site.data.template.social.facebook }};" target="_bank"><i class="fa fa-facebook-square " aria-hidden="true"></i></a>-->
 		      	<a href="{{ site.data.template.social.instagram }}" target="_bank"><i class="fa fa-instagram " aria-hidden="true"></i></a>
 		        <a href="{{ site.data.template.social.pinterest }}" target="_bank"><i class="fa fa-pinterest-square " aria-hidden="true"></i></a>
 
