--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
       </form>
        -->
       <ul class="nav navbar-nav navbar-right">
-        <li><a target="_bank" href="{{ site.data.template.social.facebook }}"><i class="fa fa-facebook-square " aria-hidden="true"></i></a></li>
+        <!--<li><a target="_bank" href="{{ site.data.template.social.facebook }}"><i class="fa fa-facebook-square " aria-hidden="true"></i></a></li>-->
         <li><a target="_bank" href="{{ site.data.template.social.instagram }}"><i class="fa fa-instagram " aria-hidden="true"></i></a></li>
         <li><a target="_bank" href="{{ site.data.template.social.pinterest }}"><i class="fa fa-pinterest-square " aria-hidden="true"></i>
 </a></li>
